force-app/main/default/objects/Retention_Preference__c/Retention_Preference__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Retention Preference</label>
</CustomObject>