force-app/main/default/objects/Retention_Preference__c/fields/Delete_Records_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Delete_Records_After_Days__c</fullName>
    <label>Delete Records After (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>