force-app/main/default/objects/Retention_Preference__c/fields/Last_Ran_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Ran_Date_Time__c</fullName>
    <label>Last Ran (Date/Time)</label>
    <type>DateTime</type>
</CustomField>