force-app/main/default/objects/Retention_Preference__c/fields/Records_Purged__c.field-meta.xml
<CustomField>
    <fullName>Records_Purged__c</fullName>
    <label>Records Purged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>