force-app/main/default/objects/Retention_Preference__c/fields/Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Where_Clause__c</fullName>
    <label>Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>